Fix overflow for mdr box (???)

--- a/custom.css
+++ b/custom.css
@@ -7,6 +7,7 @@
   margin-left: 20%;
   moz-border-radius: 15px;
   -webkit-border-radius: 15px;
+  overflow: scroll;
 }
 
 footer {
